--- a/www/extraccion.html
+++ b/www/extraccion.html
@@ -1,11 +1,14 @@
-<ons-page>
-    <ons-toolbar>
+<ons-page id="extraccion">
+    <ons-toolbar id="home-toolbar">
       <div class="left">
-          <ons-back-button></ons-back-button>
+          <ons-toolbar-button onclick="openMenu()">
+              <ons-icon icon="md-menu"></ons-icon>
+          </ons-toolbar-button>
       </div>
-  
-      <div class="center">Extracción y purificación</div>
+
+      <div class="center">Inicio</div>
     </ons-toolbar>
+
 
     <div style="text-align: justify; padding: 0 10px;">
       <h3 style="text-align: center;">Extracción, purificación y análisis de ADN</h3>
