--- a/www/poliacrilamida.html
+++ b/www/poliacrilamida.html
@@ -1,10 +1,12 @@
 <ons-page id="">
-    <ons-toolbar>
-      <div class="left">
-          <ons-back-button></ons-back-button>
-      </div>
-  
-      <div class="center"></div>
-    </ons-toolbar>
-  
+  <ons-toolbar id="home-toolbar">
+    <div class="left">
+        <ons-toolbar-button onclick="openMenu()">
+            <ons-icon icon="md-menu"></ons-icon>
+        </ons-toolbar-button>
+    </div>
+
+    <div class="center">Inicio</div>
+  </ons-toolbar>
+
 </ons-page>
